# metamod-p

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.mak
doc/txt/: metamod.txt
metamod/: CMakeLists.txt  Config.mak  Makefile  game_support.cpp  metamod.vcproj  mplugin.cpp  osdep_detect_gamedll_linux.cpp
stub_plugin/: CMakeLists.txt
trace_plugin/: CMakeLists.txt
